// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/LinkList Esempi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <a
            className="list-item"
          >
            <span>
              Link list 1
            </span>
          </a>
        </li>
        <li>
          <a
            className="list-item"
          >
            <span>
              Link list 2
            </span>
          </a>
        </li>
        <li>
          <a
            className="list-item"
          >
            <span>
              Link list 3
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList Header e Divider 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <div
        className="link-list-wrapper"
      >
        <ul
          className="link-list"
        >
          <li>
            <h3
              className="header list-item"
            >
              Heading senza link
            </h3>
          </li>
          <li>
            <a
              className="list-item"
            >
              <span>
                Link list 1
              </span>
            </a>
          </li>
          <li>
            <a
              className="list-item"
            >
              <span>
                Link list 2
              </span>
            </a>
          </li>
          <li>
            <a
              className="list-item"
            >
              <span>
                Link list 3
              </span>
            </a>
          </li>
          <li>
            <span
              className="divider list-item"
            />
          </li>
          <li>
            <a
              className="list-item"
            >
              <span>
                Link list 4
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        className="link-list-wrapper"
      >
        <ul
          className="link-list"
        >
          <li>
            <h3>
              <a
                className="header list-item"
                href="#"
              >
                Heading con link
              </a>
            </h3>
          </li>
          <li>
            <a
              className="list-item"
            >
              <span>
                Link list 1
              </span>
            </a>
          </li>
          <li>
            <a
              className="list-item"
            >
              <span>
                Link list 2
              </span>
            </a>
          </li>
          <li>
            <a
              className="list-item"
            >
              <span>
                Link list 3
              </span>
            </a>
          </li>
          <li>
            <span
              className="divider list-item"
            />
          </li>
          <li>
            <a
              className="list-item"
            >
              <span>
                Link list 4
              </span>
            </a>
          </li>
        </ul>
      </div>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList Sizing 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <h3>
            <a
              className="header list-item"
              href="#"
            >
              Heading
            </a>
          </h3>
        </li>
        <li>
          <a
            className="size list-item"
          >
            <span>
              Link list 1
            </span>
          </a>
        </li>
        <li>
          <a
            className="size list-item"
          >
            <span>
              Link list 2
            </span>
          </a>
        </li>
        <li>
          <a
            className="size list-item"
          >
            <span>
              Link list 3
            </span>
          </a>
        </li>
        <li>
          <span
            className="divider list-item"
          />
        </li>
        <li>
          <a
            className="size list-item"
          >
            <span>
              Link list 4
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList Stato Attivo 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <a
            className="list-item"
          >
            <span>
              Link list 1
            </span>
          </a>
        </li>
        <li>
          <a
            className="active list-item"
          >
            <span>
              Link list 2 active
            </span>
          </a>
        </li>
        <li>
          <a
            className="list-item"
          >
            <span>
              Link list 3
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList Stato Disabilitato 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <a
            className="list-item"
          >
            <span>
              Link list 1
            </span>
          </a>
        </li>
        <li>
          <a
            className="disabled list-item"
            onClick={[Function]}
          >
            <span>
              Link list 2 disabled
            </span>
          </a>
        </li>
        <li>
          <a
            className="list-item"
          >
            <span>
              Link list 3
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList Titolo lista 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sticky-wrapper navbar-wrapper"
    >
      <nav
        className="it-navscroll-wrapper it-top-navscroll navbar navbar-expand-lg"
      >
        <div
          className="menu-wrapper"
        >
          <div
            className="link-list-wrapper menu-link-list"
          >
            <h3
              className="no_toc"
            >
              Indice della pagina
            </h3>
            <ul
              className="link-list"
            >
              <li
                className="nav-item"
              >
                <a
                  className="nav-link"
                  href="#cos-e"
                  onClick={[Function]}
                >
                  <span>
                    Cos'è
                  </span>
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link"
                  href="#luogo"
                  onClick={[Function]}
                >
                  <span>
                    Luogo
                  </span>
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link"
                  href="#date-e-orari"
                  onClick={[Function]}
                >
                  <span>
                    Date e orari
                  </span>
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link"
                  href="#costi"
                  onClick={[Function]}
                >
                  <span>
                    Costi
                  </span>
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link"
                  href="#documenti"
                  onClick={[Function]}
                >
                  <span>
                    Documenti
                  </span>
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link"
                  href="#contatti"
                  onClick={[Function]}
                >
                  <span>
                    Contatti
                  </span>
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link"
                  href="#appuntamenti"
                  onClick={[Function]}
                >
                  <span>
                    Appuntamenti
                  </span>
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link"
                  href="#ulteriori-informazioni"
                  onClick={[Function]}
                >
                  <span>
                    Ulteriori informazioni
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList.Con controlli Con avatar 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <a
            className="active list-item"
          >
            <img
              alt="avataralt"
              className="avatar lg-size"
              src="http://via.placeholder.com/40x40"
              title="avatartitle"
            />
            <span>
              Link list 1 active 
            </span>
          </a>
        </li>
        <li>
          <a
            className="list-item"
          >
            <img
              alt="avataralt"
              className="avatar lg-size"
              src="http://via.placeholder.com/40x40"
              title="avatartitle"
            />
            <span>
              Link list 2 
            </span>
          </a>
        </li>
        <li>
          <a
            className="disabled list-item"
            onClick={[Function]}
          >
            <img
              alt="avataralt"
              className="avatar lg-size"
              src="http://via.placeholder.com/40x40"
              title="avatartitle"
            />
            <span>
              Link list 3 disabled 
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList.Con controlli Con checkbox 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <div
            className="active list-item"
          >
            <div
              className="form-check-group form-check"
            >
              <input
                className="form-control"
                defaultChecked={true}
                id="checkbox1"
                onBlur={[Function]}
                onFocus={[Function]}
                type="checkbox"
              />
              <label
                className="form-check-label"
                htmlFor="checkbox1"
              >
                Checkbox selezionato
              </label>
            </div>
          </div>
        </li>
        <li>
          <div
            className="active list-item"
          >
            <div
              className="form-check-group form-check"
            >
              <input
                className="form-control"
                id="checkbox2"
                onBlur={[Function]}
                onFocus={[Function]}
                type="checkbox"
              />
              <label
                className="form-check-label"
                htmlFor="checkbox2"
              >
                Checkbox non selezionato
              </label>
            </div>
          </div>
        </li>
        <li>
          <div
            className="disabled list-item"
            onClick={[Function]}
          >
            <div
              className="form-check-group form-check"
            >
              <input
                className="form-control"
                disabled={true}
                id="checkbox3"
                onBlur={[Function]}
                onFocus={[Function]}
                type="checkbox"
              />
              <label
                className="form-check-label"
                htmlFor="checkbox3"
              >
                Checkbox disabilitato non selezionato
              </label>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList.Con controlli Con switch 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <div
            className="active list-item"
          >
            <div
              className="toggles"
            >
              <label
                className="form-check-label"
              >
                Label per toggle
                <input
                  className="form-check-input"
                  type="checkbox"
                />
                <span
                  className="lever"
                />
              </label>
            </div>
          </div>
        </li>
        <li>
          <div
            className="disabled list-item"
            onClick={[Function]}
          >
            <div
              className="toggles"
            >
              <label
                className="form-check-label"
              >
                Label per disabled toggle
                <input
                  className="form-check-input"
                  disabled={true}
                  type="checkbox"
                />
                <span
                  className="lever"
                />
              </label>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList.Con controlli Primary Action 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <a
            className="left-icon active list-item"
          >
            <i
              aria-hidden="true"
              className="it-chevron-right left"
            />
            <svg
              className="icon left icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
              />
            </svg>
            <span>
              Link list 1 active
            </span>
          </a>
        </li>
        <li>
          <a
            className="left-icon list-item"
          >
            <i
              aria-hidden="true"
              className="it-chevron-right left"
            />
            <svg
              className="icon left icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
              />
            </svg>
            <span>
              Link list 2
            </span>
          </a>
        </li>
        <li>
          <a
            className="left-icon disabled list-item"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="it-chevron-right left"
            />
            <svg
              className="icon left icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
              />
            </svg>
            <span>
              Link list 3 disabled
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList.Con controlli Primary e Secondary Action 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <a
            className="left-icon right-icon active list-item"
          >
            <i
              className="it-favorite left"
            />
            <svg
              className="icon left icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.4 13.4l-.7-.7a2.9 2.9 0 00.9-2.1 2.7 2.7 0 00-.9-2.1L9.2 4.9a3.2 3.2 0 00-4.3 0 3.2 3.2 0 000 4.3L7.8 12l-.7.7-2.9-2.8a4.2 4.2 0 010-5.7 4.2 4.2 0 015.7 0l3.5 3.6a3.6 3.6 0 011.2 2.8 3.6 3.6 0 01-1.2 2.8zm6.4 6.4a4.2 4.2 0 000-5.7l-2.9-2.8-.7.7 2.9 2.8a3.2 3.2 0 010 4.3 3.2 3.2 0 01-4.3 0l-3.5-3.6a2.7 2.7 0 01-.9-2.1 2.9 2.9 0 01.9-2.1l-.7-.7a3.6 3.6 0 00-1.2 2.8 3.6 3.6 0 001.2 2.8l3.5 3.6a3.8 3.8 0 002.8 1.1 3.9 3.9 0 002.9-1.1zm-6.7-6.7"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
            <span>
              Link list 1 active
            </span>
            <i
              className="it-app right secondary"
            />
            <svg
              className="icon right icon-secondary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            className="left-icon right-icon list-item"
          >
            <i
              className="it-favorite left"
            />
            <svg
              className="icon left icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.4 13.4l-.7-.7a2.9 2.9 0 00.9-2.1 2.7 2.7 0 00-.9-2.1L9.2 4.9a3.2 3.2 0 00-4.3 0 3.2 3.2 0 000 4.3L7.8 12l-.7.7-2.9-2.8a4.2 4.2 0 010-5.7 4.2 4.2 0 015.7 0l3.5 3.6a3.6 3.6 0 011.2 2.8 3.6 3.6 0 01-1.2 2.8zm6.4 6.4a4.2 4.2 0 000-5.7l-2.9-2.8-.7.7 2.9 2.8a3.2 3.2 0 010 4.3 3.2 3.2 0 01-4.3 0l-3.5-3.6a2.7 2.7 0 01-.9-2.1 2.9 2.9 0 01.9-2.1l-.7-.7a3.6 3.6 0 00-1.2 2.8 3.6 3.6 0 001.2 2.8l3.5 3.6a3.8 3.8 0 002.8 1.1 3.9 3.9 0 002.9-1.1zm-6.7-6.7"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
            <span>
              Link list 2
            </span>
            <i
              className="it-app right secondary"
            />
            <svg
              className="icon right icon-secondary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            className="left-icon right-icon disabled list-item"
            onClick={[Function]}
          >
            <i
              className="it-favorite left"
            />
            <svg
              className="icon left icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.4 13.4l-.7-.7a2.9 2.9 0 00.9-2.1 2.7 2.7 0 00-.9-2.1L9.2 4.9a3.2 3.2 0 00-4.3 0 3.2 3.2 0 000 4.3L7.8 12l-.7.7-2.9-2.8a4.2 4.2 0 010-5.7 4.2 4.2 0 015.7 0l3.5 3.6a3.6 3.6 0 011.2 2.8 3.6 3.6 0 01-1.2 2.8zm6.4 6.4a4.2 4.2 0 000-5.7l-2.9-2.8-.7.7 2.9 2.8a3.2 3.2 0 010 4.3 3.2 3.2 0 01-4.3 0l-3.5-3.6a2.7 2.7 0 01-.9-2.1 2.9 2.9 0 01.9-2.1l-.7-.7a3.6 3.6 0 00-1.2 2.8 3.6 3.6 0 001.2 2.8l3.5 3.6a3.8 3.8 0 002.8 1.1 3.9 3.9 0 002.9-1.1zm-6.7-6.7"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
            <span>
              Link list 3 disabled
            </span>
            <i
              className="it-app right secondary"
            />
            <svg
              className="icon right icon-secondary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList.Con controlli Secondary Action 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <a
            className="right-icon active list-item"
          >
            <span>
              Link list 1 active
            </span>
            <i
              className="it-app right secondary"
            />
            <svg
              className="icon icon-right icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.4 13.4l-.7-.7a2.9 2.9 0 00.9-2.1 2.7 2.7 0 00-.9-2.1L9.2 4.9a3.2 3.2 0 00-4.3 0 3.2 3.2 0 000 4.3L7.8 12l-.7.7-2.9-2.8a4.2 4.2 0 010-5.7 4.2 4.2 0 015.7 0l3.5 3.6a3.6 3.6 0 011.2 2.8 3.6 3.6 0 01-1.2 2.8zm6.4 6.4a4.2 4.2 0 000-5.7l-2.9-2.8-.7.7 2.9 2.8a3.2 3.2 0 010 4.3 3.2 3.2 0 01-4.3 0l-3.5-3.6a2.7 2.7 0 01-.9-2.1 2.9 2.9 0 01.9-2.1l-.7-.7a3.6 3.6 0 00-1.2 2.8 3.6 3.6 0 001.2 2.8l3.5 3.6a3.8 3.8 0 002.8 1.1 3.9 3.9 0 002.9-1.1zm-6.7-6.7"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            className="right-icon list-item"
          >
            <span>
              Link list 2
            </span>
            <i
              className="it-app right secondary"
            />
            <svg
              className="icon icon-right icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.4 13.4l-.7-.7a2.9 2.9 0 00.9-2.1 2.7 2.7 0 00-.9-2.1L9.2 4.9a3.2 3.2 0 00-4.3 0 3.2 3.2 0 000 4.3L7.8 12l-.7.7-2.9-2.8a4.2 4.2 0 010-5.7 4.2 4.2 0 015.7 0l3.5 3.6a3.6 3.6 0 011.2 2.8 3.6 3.6 0 01-1.2 2.8zm6.4 6.4a4.2 4.2 0 000-5.7l-2.9-2.8-.7.7 2.9 2.8a3.2 3.2 0 010 4.3 3.2 3.2 0 01-4.3 0l-3.5-3.6a2.7 2.7 0 01-.9-2.1 2.9 2.9 0 01.9-2.1l-.7-.7a3.6 3.6 0 00-1.2 2.8 3.6 3.6 0 001.2 2.8l3.5 3.6a3.8 3.8 0 002.8 1.1 3.9 3.9 0 002.9-1.1zm-6.7-6.7"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            className="right-icon disabled list-item"
            onClick={[Function]}
          >
            <span>
              Link list 3 disabled
            </span>
            <i
              className="it-app right secondary"
            />
            <svg
              className="icon icon-right icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.4 13.4l-.7-.7a2.9 2.9 0 00.9-2.1 2.7 2.7 0 00-.9-2.1L9.2 4.9a3.2 3.2 0 00-4.3 0 3.2 3.2 0 000 4.3L7.8 12l-.7.7-2.9-2.8a4.2 4.2 0 010-5.7 4.2 4.2 0 015.7 0l3.5 3.6a3.6 3.6 0 011.2 2.8 3.6 3.6 0 01-1.2 2.8zm6.4 6.4a4.2 4.2 0 000-5.7l-2.9-2.8-.7.7 2.9 2.8a3.2 3.2 0 010 4.3 3.2 3.2 0 01-4.3 0l-3.5-3.6a2.7 2.7 0 01-.9-2.1 2.9 2.9 0 01.9-2.1l-.7-.7a3.6 3.6 0 00-1.2 2.8 3.6 3.6 0 001.2 2.8l3.5 3.6a3.8 3.8 0 002.8 1.1 3.9 3.9 0 002.9-1.1zm-6.7-6.7"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList.Multiline Esempio Multiline 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="multiline link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <a
            className="right-icon active list-item"
          >
            <span>
              Link list 1 active
            </span>
            <i
              className="it-chevron-right right"
            />
            <svg
              className="icon icon-right icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
              />
            </svg>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit…
            </p>
          </a>
        </li>
        <li>
          <span
            className="divider list-item"
          />
        </li>
        <li>
          <a
            className="right-icon list-item"
          >
            <span>
              Link list 2
            </span>
            <i
              className="it-chevron-right right"
            />
            <svg
              className="icon icon-right icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
              />
            </svg>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit…
            </p>
          </a>
        </li>
        <li>
          <span
            className="divider list-item"
          />
        </li>
        <li>
          <a
            className="right-icon disabled list-item"
            onClick={[Function]}
          >
            <span>
              Link list 3 disabled
            </span>
            <i
              className="it-chevron-right right"
            />
             
            <svg
              className="icon icon-right icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
              />
            </svg>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit…
            </p>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList.Nested navigation Collapsible 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <a
            className="right-icon size list-item"
            onClick={[Function]}
          >
            <span>
              Link list 1 
            </span>
            <i
              className="it-expand right"
            />
            <svg
              className="icon right icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
              />
            </svg>
          </a>
        </li>
        <div
          className="collapse"
          style={Object {}}
        >
          <ul
            className="link-sublist"
          >
            <li>
              <a
                className="list-item"
              >
                <span>
                  Link list 4 
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Link list 5 
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Link list 6 
                </span>
              </a>
            </li>
          </ul>
        </div>
        <li>
          <a
            className="right-icon size list-item"
            onClick={[Function]}
          >
            <span>
              Link list 2 
            </span>
            <i
              className="it-expand right"
            />
            <svg
              className="icon right icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
              />
            </svg>
          </a>
        </li>
        <div
          className="collapse"
          style={Object {}}
        >
          <ul
            className="link-sublist"
          >
            <li>
              <a
                className="list-item"
              >
                <span>
                  Link list 7 
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Link list 8 
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Link list 9 
                </span>
              </a>
            </li>
          </ul>
        </div>
        <li>
          <a
            className="right-icon size list-item"
            onClick={[Function]}
          >
            <span>
              Link list 3 
            </span>
            <i
              className="it-expand right"
            />
            <svg
              className="icon right icon-primary"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
              />
            </svg>
          </a>
        </li>
        <div
          className="collapse"
          style={Object {}}
        >
          <ul
            className="link-sublist"
          >
            <li>
              <a
                className="list-item"
              >
                <span>
                  Link list 10 
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Link list 11 
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
              >
                <span>
                  Link list 12 
                </span>
              </a>
            </li>
          </ul>
        </div>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/LinkList.Nested navigation Fixed 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list"
      >
        <li>
          <a
            className="right-icon size list-item"
          >
            <span>
              Link list 1 
            </span>
            <i
              className="it-favorite right"
            />
            <svg
              className="icon right icon-primary"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.4 13.4l-.7-.7a2.9 2.9 0 00.9-2.1 2.7 2.7 0 00-.9-2.1L9.2 4.9a3.2 3.2 0 00-4.3 0 3.2 3.2 0 000 4.3L7.8 12l-.7.7-2.9-2.8a4.2 4.2 0 010-5.7 4.2 4.2 0 015.7 0l3.5 3.6a3.6 3.6 0 011.2 2.8 3.6 3.6 0 01-1.2 2.8zm6.4 6.4a4.2 4.2 0 000-5.7l-2.9-2.8-.7.7 2.9 2.8a3.2 3.2 0 010 4.3 3.2 3.2 0 01-4.3 0l-3.5-3.6a2.7 2.7 0 01-.9-2.1 2.9 2.9 0 01.9-2.1l-.7-.7a3.6 3.6 0 00-1.2 2.8 3.6 3.6 0 001.2 2.8l3.5 3.6a3.8 3.8 0 002.8 1.1 3.9 3.9 0 002.9-1.1zm-6.7-6.7"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            className="right-icon size list-item"
          >
            <span>
              Link list 2 
            </span>
            <i
              className="it-favorite right"
            />
            <svg
              className="icon right icon-primary"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.4 13.4l-.7-.7a2.9 2.9 0 00.9-2.1 2.7 2.7 0 00-.9-2.1L9.2 4.9a3.2 3.2 0 00-4.3 0 3.2 3.2 0 000 4.3L7.8 12l-.7.7-2.9-2.8a4.2 4.2 0 010-5.7 4.2 4.2 0 015.7 0l3.5 3.6a3.6 3.6 0 011.2 2.8 3.6 3.6 0 01-1.2 2.8zm6.4 6.4a4.2 4.2 0 000-5.7l-2.9-2.8-.7.7 2.9 2.8a3.2 3.2 0 010 4.3 3.2 3.2 0 01-4.3 0l-3.5-3.6a2.7 2.7 0 01-.9-2.1 2.9 2.9 0 01.9-2.1l-.7-.7a3.6 3.6 0 00-1.2 2.8 3.6 3.6 0 001.2 2.8l3.5 3.6a3.8 3.8 0 002.8 1.1 3.9 3.9 0 002.9-1.1zm-6.7-6.7"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </a>
        </li>
        <ul
          className="link-sublist"
        >
          <li>
            <a
              className="list-item"
            >
              <span>
                Link list 4 
              </span>
            </a>
          </li>
          <li>
            <a
              className="list-item"
            >
              <span>
                Link list 5 
              </span>
            </a>
          </li>
          <li>
            <a
              className="list-item"
            >
              <span>
                Link list 6 
              </span>
            </a>
          </li>
        </ul>
        <li>
          <a
            className="right-icon size list-item"
          >
            <span>
              Link list 3 
            </span>
            <i
              className="it-favorite right"
            />
            <svg
              className="icon right icon-primary"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.4 13.4l-.7-.7a2.9 2.9 0 00.9-2.1 2.7 2.7 0 00-.9-2.1L9.2 4.9a3.2 3.2 0 00-4.3 0 3.2 3.2 0 000 4.3L7.8 12l-.7.7-2.9-2.8a4.2 4.2 0 010-5.7 4.2 4.2 0 015.7 0l3.5 3.6a3.6 3.6 0 011.2 2.8 3.6 3.6 0 01-1.2 2.8zm6.4 6.4a4.2 4.2 0 000-5.7l-2.9-2.8-.7.7 2.9 2.8a3.2 3.2 0 010 4.3 3.2 3.2 0 01-4.3 0l-3.5-3.6a2.7 2.7 0 01-.9-2.1 2.9 2.9 0 01.9-2.1l-.7-.7a3.6 3.6 0 00-1.2 2.8 3.6 3.6 0 001.2 2.8l3.5 3.6a3.8 3.8 0 002.8 1.1 3.9 3.9 0 002.9-1.1zm-6.7-6.7"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
